...

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="220dp"
...

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_poster"
                android:layout_width="150dp"
                android:layout_height="220dp"
...

            <com.ramijemli.percentagechartview.PercentageChartView
                android:id="@+id/chart_popularity"
                android:layout_width="50dp"
                android:layout_height="50dp"
...

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_latest_episode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_synopsis_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_more_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/ll_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/ll_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_language_title"/>

            <TextView
...

            <TextView
                android:id="@+id/tv_season_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_episode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_homepage_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
